fixes button styling on mobile

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -45,6 +45,10 @@
     -moz-column-count: 1 !important;
     column-count: 1 !important;
   }
+
+  .wishlist-buttons{
+    flex-direction: column;
+  }
 }
 
 .todo-checkbox{
